--- a/index.html
+++ b/index.html
@@ -34,6 +34,34 @@
         </p>
         <a href="5511963684836">Contrate Agora</a>
     </section>
+
+    <section class="serviços">
+        <h2>Serviços</h2>
+        <div>
+            <img src="img/p1.png" alt="camera">
+            <h3>Fotografia</h3>
+            <p>
+                Guarde momentos importantes, como casamento,
+                formaturas, aniversários para sempre com alta qualidade.
+            </p>
+        </div>
+        <div>
+            <img src="img/p2.png" alt="Filme">
+            <h3>Edição de Vídeos</h3>
+            <p>
+                Quer transformar alguma lembrança em vídeo em
+                algo emocionante com trilha sonora,
+                textos e cores fantásticas?
+        </div>
+        <div>
+            <img src="img/p3.png" alt="Videoplayer">
+            <h3>Captação de imagens</h3>
+            <p>
+                Vai participar de algum evento 
+                importante recordar tudo a cada 
+                segundo para tornar tudo imortal
+        </div>
+    </section>
 </body>
 
 </html>
