add section services fotos

--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
                 segundo para tornar tudo imortal
         </div>
     </section>
+    <section class="fotos">
+        <h2>Fotos</h2>
+        <img src="img/ceu.jpg" alt="ceu">
+        <img src="img/grma.jpg" alt="grma">
+        <img src="img/montanha.jpg" alt="montanha">
+        <img src="img/mar.jpg" alt="mar">
+        <img src="img/arvore.jpg" alt="arvore">
+        <img src="img/ponte.jpg" alt="ponte">
+    </section>
 </body>
 
 </html>
