add section contact

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
         <img src="img/arvore.jpg" alt="arvore">
         <img src="img/ponte.jpg" alt="ponte">
     </section>
+
+    <section class="contato">
+        <h2>Contato</h2>
+        <p>
+            Vem falar com a gente!
+        </p>
+        <div>
+            <img src="img/tel.png" alt="telefone">
+            <p><a href="tel:11963684836">(11) 963684836</a></p>
+        </div>
+    </section>
 </body>
 
 </html>
