--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             <img src="img/tel.png" alt="telefone">
             <p><a href="tel:11963684836">(11) 963684836</a></p>
         </div>
+        <div>
+            <img src="img/mail.png" alt="email">
+            <p><a href="mailto:rdr.alves@gmail.com">rdr.alves@gmail.com</a></p>
+        </div>
     </section>
 </body>
 
