--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
             <p><a href="mailto:rdr.alves@gmail.com">rdr.alves@gmail.com</a></p>
         </div>
     </section>
+
+    <footer>
+        <a href="#topo">voltar</a>
+        <p>Desenvolvido por, <strong>Rodrigo Reis</strong></p>
+    </footer>
 </body>
 
 </html>
